<resources>
    <string name="app_name">Menu Application</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="ho_geldino">Hello Dear </string>
    <string name="Welcome_home_screen">Welcome to the home screen</string>
    <string name="changeـapplication"> You can change the application settings by going to the menu, which will allow you to change the language and mode.</string>
    <string name="setting">Settings</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="Turkish">Turkish</string>
    <string name="home_page">Home Page</string>
    <string name="end">End</string>
    <string name="default_Mode">Default</string>
    <string name="what_do_you_prefer_mode">What do you prefer Mode?</string>
    <string name="what_do_you_prefer_language">What do you prefer Language?</string>

</resources>